[project]
name = "co"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "keyboard>=0.13.5",
    "opencv-python>=4.12.0.88",
    "pillow>=11.3.0",
    "pyinstaller>=6.14.2",
    "pyyaml>=6.0.2",
    "websocket-client>=1.8.0",
]
